RuleParser.cpp

// Generated from Rule.g4 by ANTLR 4.13.2



#include "RuleParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct RuleParserStaticData final {
  RuleParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  RuleParserStaticData(const RuleParserStaticData&) = delete;
  RuleParserStaticData(RuleParserStaticData&&) = delete;
  RuleParserStaticData& operator=(const RuleParserStaticData&) = delete;
  RuleParserStaticData& operator=(RuleParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag ruleParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<RuleParserStaticData> ruleParserStaticData = nullptr;

void ruleParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (ruleParserStaticData != nullptr) {
    return;
  }
#else
  assert(ruleParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<RuleParserStaticData>(
    std::vector<std::string>{
      "ruleFile", "ruleDef", "property", "patternDef", "nodePattern", "patternArgList", 
      "patternArg"
    },
    std::vector<std::string>{
      "", "'{'", "'}'", "':'", "'('", "')'", "','", "'='", "'rule'", "'severity'", 
      "'action'", "'profile'", "'description'", "'pattern'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "RULE", "SEVERITY_KW", "ACTION_KW", 
      "PROFILE_KW", "DESCRIPTION_KW", "PATTERN_KW", "SEVERITY", "ACTION", 
      "PROFILE", "BOOL", "IDENT", "STRING", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  ruleParserStaticData = std::move(staticData);
}

}

RuleParser::RuleParser(TokenStream *input) : RuleParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

RuleParser::RuleParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  RuleParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *ruleParserStaticData->atn, ruleParserStaticData->decisionToDFA, ruleParserStaticData->sharedContextCache, options);
}

RuleParser::~RuleParser() {
  delete _interpreter;
}

const atn::ATN& RuleParser::getATN() const {
  return *ruleParserStaticData->atn;
}

std::string RuleParser::getGrammarFileName() const {
  return "Rule.g4";
}

const std::vector<std::string>& RuleParser::getRuleNames() const {
  return ruleParserStaticData->ruleNames;
}

const dfa::Vocabulary& RuleParser::getVocabulary() const {
  return ruleParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView RuleParser::getSerializedATN() const {
  return ruleParserStaticData->serializedATN;
}


//----------------- RuleFileContext ------------------------------------------------------------------

RuleParser::RuleFileContext::RuleFileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<RuleParser::RuleDefContext *> RuleParser::RuleFileContext::ruleDef() {
  return getRuleContexts<RuleParser::RuleDefContext>();
}

RuleParser::RuleDefContext* RuleParser::RuleFileContext::ruleDef(size_t i) {
  return getRuleContext<RuleParser::RuleDefContext>(i);
}


size_t RuleParser::RuleFileContext::getRuleIndex() const {
  return RuleParser::RuleRuleFile;
}


RuleParser::RuleFileContext* RuleParser::ruleFile() {
  RuleFileContext *_localctx = _tracker.createInstance<RuleFileContext>(_ctx, getState());
  enterRule(_localctx, 0, RuleParser::RuleRuleFile);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(15); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(14);
      ruleDef();
      setState(17); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == RuleParser::RULE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RuleDefContext ------------------------------------------------------------------

RuleParser::RuleDefContext::RuleDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RuleParser::RuleDefContext::RULE() {
  return getToken(RuleParser::RULE, 0);
}

tree::TerminalNode* RuleParser::RuleDefContext::IDENT() {
  return getToken(RuleParser::IDENT, 0);
}

RuleParser::PatternDefContext* RuleParser::RuleDefContext::patternDef() {
  return getRuleContext<RuleParser::PatternDefContext>(0);
}

std::vector<RuleParser::PropertyContext *> RuleParser::RuleDefContext::property() {
  return getRuleContexts<RuleParser::PropertyContext>();
}

RuleParser::PropertyContext* RuleParser::RuleDefContext::property(size_t i) {
  return getRuleContext<RuleParser::PropertyContext>(i);
}


size_t RuleParser::RuleDefContext::getRuleIndex() const {
  return RuleParser::RuleRuleDef;
}


RuleParser::RuleDefContext* RuleParser::ruleDef() {
  RuleDefContext *_localctx = _tracker.createInstance<RuleDefContext>(_ctx, getState());
  enterRule(_localctx, 2, RuleParser::RuleRuleDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(19);
    match(RuleParser::RULE);
    setState(20);
    match(RuleParser::IDENT);
    setState(21);
    match(RuleParser::T__0);
    setState(25);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 7680) != 0)) {
      setState(22);
      property();
      setState(27);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(28);
    patternDef();
    setState(29);
    match(RuleParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PropertyContext ------------------------------------------------------------------

RuleParser::PropertyContext::PropertyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RuleParser::PropertyContext::SEVERITY_KW() {
  return getToken(RuleParser::SEVERITY_KW, 0);
}

tree::TerminalNode* RuleParser::PropertyContext::SEVERITY() {
  return getToken(RuleParser::SEVERITY, 0);
}

tree::TerminalNode* RuleParser::PropertyContext::ACTION_KW() {
  return getToken(RuleParser::ACTION_KW, 0);
}

tree::TerminalNode* RuleParser::PropertyContext::ACTION() {
  return getToken(RuleParser::ACTION, 0);
}

tree::TerminalNode* RuleParser::PropertyContext::PROFILE_KW() {
  return getToken(RuleParser::PROFILE_KW, 0);
}

tree::TerminalNode* RuleParser::PropertyContext::PROFILE() {
  return getToken(RuleParser::PROFILE, 0);
}

tree::TerminalNode* RuleParser::PropertyContext::DESCRIPTION_KW() {
  return getToken(RuleParser::DESCRIPTION_KW, 0);
}

tree::TerminalNode* RuleParser::PropertyContext::STRING() {
  return getToken(RuleParser::STRING, 0);
}


size_t RuleParser::PropertyContext::getRuleIndex() const {
  return RuleParser::RuleProperty;
}


RuleParser::PropertyContext* RuleParser::property() {
  PropertyContext *_localctx = _tracker.createInstance<PropertyContext>(_ctx, getState());
  enterRule(_localctx, 4, RuleParser::RuleProperty);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(43);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case RuleParser::SEVERITY_KW: {
        enterOuterAlt(_localctx, 1);
        setState(31);
        match(RuleParser::SEVERITY_KW);
        setState(32);
        match(RuleParser::T__2);
        setState(33);
        match(RuleParser::SEVERITY);
        break;
      }

      case RuleParser::ACTION_KW: {
        enterOuterAlt(_localctx, 2);
        setState(34);
        match(RuleParser::ACTION_KW);
        setState(35);
        match(RuleParser::T__2);
        setState(36);
        match(RuleParser::ACTION);
        break;
      }

      case RuleParser::PROFILE_KW: {
        enterOuterAlt(_localctx, 3);
        setState(37);
        match(RuleParser::PROFILE_KW);
        setState(38);
        match(RuleParser::T__2);
        setState(39);
        match(RuleParser::PROFILE);
        break;
      }

      case RuleParser::DESCRIPTION_KW: {
        enterOuterAlt(_localctx, 4);
        setState(40);
        match(RuleParser::DESCRIPTION_KW);
        setState(41);
        match(RuleParser::T__2);
        setState(42);
        match(RuleParser::STRING);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PatternDefContext ------------------------------------------------------------------

RuleParser::PatternDefContext::PatternDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RuleParser::PatternDefContext::PATTERN_KW() {
  return getToken(RuleParser::PATTERN_KW, 0);
}

RuleParser::NodePatternContext* RuleParser::PatternDefContext::nodePattern() {
  return getRuleContext<RuleParser::NodePatternContext>(0);
}


size_t RuleParser::PatternDefContext::getRuleIndex() const {
  return RuleParser::RulePatternDef;
}


RuleParser::PatternDefContext* RuleParser::patternDef() {
  PatternDefContext *_localctx = _tracker.createInstance<PatternDefContext>(_ctx, getState());
  enterRule(_localctx, 6, RuleParser::RulePatternDef);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    match(RuleParser::PATTERN_KW);
    setState(46);
    match(RuleParser::T__2);
    setState(47);
    nodePattern();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NodePatternContext ------------------------------------------------------------------

RuleParser::NodePatternContext::NodePatternContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RuleParser::NodePatternContext::IDENT() {
  return getToken(RuleParser::IDENT, 0);
}

RuleParser::PatternArgListContext* RuleParser::NodePatternContext::patternArgList() {
  return getRuleContext<RuleParser::PatternArgListContext>(0);
}


size_t RuleParser::NodePatternContext::getRuleIndex() const {
  return RuleParser::RuleNodePattern;
}


RuleParser::NodePatternContext* RuleParser::nodePattern() {
  NodePatternContext *_localctx = _tracker.createInstance<NodePatternContext>(_ctx, getState());
  enterRule(_localctx, 8, RuleParser::RuleNodePattern);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    match(RuleParser::IDENT);
    setState(50);
    match(RuleParser::T__3);
    setState(52);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == RuleParser::IDENT) {
      setState(51);
      patternArgList();
    }
    setState(54);
    match(RuleParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PatternArgListContext ------------------------------------------------------------------

RuleParser::PatternArgListContext::PatternArgListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<RuleParser::PatternArgContext *> RuleParser::PatternArgListContext::patternArg() {
  return getRuleContexts<RuleParser::PatternArgContext>();
}

RuleParser::PatternArgContext* RuleParser::PatternArgListContext::patternArg(size_t i) {
  return getRuleContext<RuleParser::PatternArgContext>(i);
}


size_t RuleParser::PatternArgListContext::getRuleIndex() const {
  return RuleParser::RulePatternArgList;
}


RuleParser::PatternArgListContext* RuleParser::patternArgList() {
  PatternArgListContext *_localctx = _tracker.createInstance<PatternArgListContext>(_ctx, getState());
  enterRule(_localctx, 10, RuleParser::RulePatternArgList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    patternArg();
    setState(61);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == RuleParser::T__5) {
      setState(57);
      match(RuleParser::T__5);
      setState(58);
      patternArg();
      setState(63);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PatternArgContext ------------------------------------------------------------------

RuleParser::PatternArgContext::PatternArgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RuleParser::PatternArgContext::IDENT() {
  return getToken(RuleParser::IDENT, 0);
}

tree::TerminalNode* RuleParser::PatternArgContext::STRING() {
  return getToken(RuleParser::STRING, 0);
}

tree::TerminalNode* RuleParser::PatternArgContext::BOOL() {
  return getToken(RuleParser::BOOL, 0);
}

RuleParser::NodePatternContext* RuleParser::PatternArgContext::nodePattern() {
  return getRuleContext<RuleParser::NodePatternContext>(0);
}


size_t RuleParser::PatternArgContext::getRuleIndex() const {
  return RuleParser::RulePatternArg;
}


RuleParser::PatternArgContext* RuleParser::patternArg() {
  PatternArgContext *_localctx = _tracker.createInstance<PatternArgContext>(_ctx, getState());
  enterRule(_localctx, 12, RuleParser::RulePatternArg);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(73);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(64);
      match(RuleParser::IDENT);
      setState(65);
      match(RuleParser::T__6);
      setState(66);
      match(RuleParser::STRING);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(67);
      match(RuleParser::IDENT);
      setState(68);
      match(RuleParser::T__6);
      setState(69);
      match(RuleParser::BOOL);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(70);
      match(RuleParser::IDENT);
      setState(71);
      match(RuleParser::T__6);
      setState(72);
      nodePattern();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

void RuleParser::initialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  ruleParserInitialize();
#else
  ::antlr4::internal::call_once(ruleParserOnceFlag, ruleParserInitialize);
#endif
}
